--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -256,19 +256,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The proportion of the users converted is 11.97 percent.\n"
+      "The proportion of the users converted is 0.12 percent.\n"
      ]
     }
    ],
    "source": [
-    "converted_usrs =  df.converted.mean()*100\n",
+    "converted_usrs =  df.converted.mean()\n",
     "\n",
     "print('The proportion of the users converted is %.2f percent.'%(converted_usrs))"
    ]
@@ -557,10 +557,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probabilty of any individual being converted is 0.1196\n"
+     ]
+    }
+   ],
+   "source": [
+    "converted_prob = df2.converted.mean()\n",
+    "\n",
+    "print(\"The probabilty of any individual being converted is %.4f\"%converted_prob)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -571,10 +583,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "group\n",
+      "control      0.120386\n",
+      "treatment    0.118808\n",
+      "Name: converted, dtype: float64\n",
+      "\n",
+      "The probabilty of an individual from 'control' group being converted is 0.1204 \n"
+     ]
+    }
+   ],
+   "source": [
+    "group_converted_prob = df2.groupby(\"group\")['converted'].mean()\n",
+    "print(group_converted_prob)\n",
+    "print(\"\\nThe probabilty of an individual from 'control' group being converted is %.4f \"%group_converted_prob['control'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -585,10 +614,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probabilty of any individual from 'treatment' group being converted is 0.1188\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The probabilty of any individual from 'treatment' group being converted is %.4f\"%group_converted_prob['treatment'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -598,11 +637,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Number of individual receiving the new page is also same as number of individual in treatment group, so we can calculate using ither of them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "landing_page\n",
+      "new_page    145310\n",
+      "old_page    145274\n",
+      "Name: landing_page, dtype: int64\n",
+      "\n",
+      "Probability of individual receiving the new page is 0.5001\n"
+     ]
+    }
+   ],
+   "source": [
+    "groupby_page_prob = df2.groupby(\"landing_page\")['landing_page'].count()\n",
+    "print(groupby_page_prob)\n",
+    "\n",
+    "new_page_count = groupby_page_prob['new_page']\n",
+    "total_users = df2.shape[0]\n",
+    "# probability of individual receiving the new page is new_page_count/total_users\n",
+    "print(\"\\nProbability of individual receiving the new page is %.4f\"%(new_page_count/total_users))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -639,7 +706,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Put your answer here.**"
+    "$$ H_0 : p_{old} >= p_{new} $$\n",
+    "$$ H_1 : p_{old} < p_{new} $$"
    ]
   },
   {
@@ -667,7 +735,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -818,15 +888,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-349dcc834059>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-18-349dcc834059>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-14-349dcc834059>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    convert_old =\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-18-349dcc834059>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    convert_old =\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
